[Selinux] Add selinux parameter to kernel cmdline

--- a/arch/arm/configs/exynos5422-k3g_00_defconfig
+++ b/arch/arm/configs/exynos5422-k3g_00_defconfig
@@ -556,7 +556,7 @@ CONFIG_USE_OF=y
 CONFIG_ZBOOT_ROM_TEXT=0x0
 CONFIG_ZBOOT_ROM_BSS=0x0
 # CONFIG_ARM_APPENDED_DTB is not set
-CONFIG_CMDLINE=""
+CONFIG_CMDLINE="androidboot.selinux=permissive"
 # CONFIG_XIP_KERNEL is not set
 # CONFIG_KEXEC is not set
 # CONFIG_CRASH_DUMP is not set
