--- a/arch/arm/configs/exynos5422-k3g_00_defconfig
+++ b/arch/arm/configs/exynos5422-k3g_00_defconfig
@@ -29,7 +29,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION=""
+CONFIG_LOCALVERSION="-TeamNation"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -91,6 +91,7 @@ CONFIG_TICK_CPU_ACCOUNTING=y
 # RCU Subsystem
 #
 CONFIG_TREE_PREEMPT_RCU=y
+# CONFIG_TINY_RCU is not set
 CONFIG_PREEMPT_RCU=y
 CONFIG_RCU_STALL_COMMON=y
 # CONFIG_RCU_USER_QS is not set
@@ -107,7 +108,8 @@ CONFIG_CGROUPS=y
 CONFIG_CGROUP_DEBUG=y
 CONFIG_CGROUP_FREEZER=y
 # CONFIG_CGROUP_DEVICE is not set
-# CONFIG_CPUSETS is not set
+CONFIG_CPUSETS=y
+CONFIG_PROC_PID_CPUSET=y
 CONFIG_CGROUP_CPUACCT=y
 CONFIG_RESOURCE_COUNTERS=y
 # CONFIG_MEMCG is not set
@@ -127,7 +129,7 @@ CONFIG_UIDGID_CONVERTED=y
 # CONFIG_UIDGID_STRICT_TYPE_CHECKS is not set
 # CONFIG_SCHED_AUTOGROUP is not set
 # CONFIG_SYSFS_DEPRECATED is not set
-# CONFIG_RELAY is not set
+CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_INITRAMFS_SOURCE=""
 CONFIG_RD_GZIP=y
@@ -166,7 +168,7 @@ CONFIG_PERF_USE_VMALLOC=y
 #
 # CONFIG_PERF_EVENTS is not set
 CONFIG_VM_EVENT_COUNTERS=y
-# CONFIG_SLUB_DEBUG is not set
+CONFIG_SLUB_DEBUG=y
 # CONFIG_PTRACK_DEBUG is not set
 CONFIG_COMPAT_BRK=y
 # CONFIG_SLAB is not set
@@ -205,9 +207,15 @@ CONFIG_OLD_SIGACTION=y
 #
 # CONFIG_GCOV_KERNEL is not set
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
+CONFIG_SLABINFO=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 # CONFIG_MODULES is not set
+# CONFIG_MODULE_SIG_SHA1 is not set
+# CONFIG_MODULE_SIG_SHA224 is not set
+# CONFIG_MODULE_SIG_SHA256 is not set
+# CONFIG_MODULE_SIG_SHA384 is not set
+# CONFIG_MODULE_SIG_SHA512 is not set
 CONFIG_STOP_MACHINE=y
 CONFIG_BLOCK=y
 CONFIG_LBDAF=y
@@ -249,7 +257,6 @@ CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_UNINLINE_SPIN_UNLOCK=y
-CONFIG_MUTEX_SPIN_ON_OWNER=y
 CONFIG_FREEZER=y
 
 #
@@ -356,10 +363,10 @@ CONFIG_PC_ITERATION=5
 # CONFIG_EXYNOS_SNAPSHOT is not set
 CONFIG_EXYNOS5_DYNAMIC_CPU_HOTPLUG=y
 CONFIG_EXYNOS_CONTENT_PATH_PROTECTION=y
+CONFIG_EXYNOS_ATAGS=y
 CONFIG_EXYNOS5_SETUP_MIPIPHY=y
-# CONFIG_ASV_MARGIN_TEST is not set
-# CONFIG_SKIP_HW_BREAKPOINT is not set
-CONFIG_SAMSUNG_PRODUCT_SHIP=y
+CONFIG_ASV_MARGIN_TEST=y
+# CONFIG_SAMSUNG_PRODUCT_SHIP is not set
 
 #
 # Flattened Device Tree based board for EXYNOS SoCs
@@ -551,12 +558,16 @@ CONFIG_SECCOMP=y
 # Boot options
 #
 CONFIG_USE_OF=y
-# CONFIG_ATAGS is not set
+CONFIG_ATAGS=y
+# CONFIG_DEPRECATED_PARAM_STRUCT is not set
 # CONFIG_BUILD_ARM_APPENDED_DTB_IMAGE is not set
 CONFIG_ZBOOT_ROM_TEXT=0x0
 CONFIG_ZBOOT_ROM_BSS=0x0
 # CONFIG_ARM_APPENDED_DTB is not set
-CONFIG_CMDLINE="androidboot.selinux=permissive"
+CONFIG_CMDLINE="console=ram loglevel=4 sec_debug.level=0 sec_watchdog.sec_pet=5 printk.core_num=1 androidboot.debug_level=0x4f4c sec_log=0x200000@0x46000000 sec_avc_log=0x40000@0x46404000 s3cfb.bootloaderfb=0x87000000 lcdtype=6301715 consoleblank=0 vmalloc=256m sec_debug.reset_reason=9 oops=panic pmic_info=83 androidboot.selinux=disabled androidboot.hardware=universal5422 snd_soc_core.pmdown_time=1000"
+# CONFIG_CMDLINE_FROM_BOOTLOADER is not set
+# CONFIG_CMDLINE_EXTEND is not set
+CONFIG_CMDLINE_FORCE=y
 # CONFIG_XIP_KERNEL is not set
 # CONFIG_KEXEC is not set
 # CONFIG_CRASH_DUMP is not set
@@ -1695,8 +1706,8 @@ CONFIG_LEGACY_PTY_COUNT=256
 # CONFIG_N_GSM is not set
 # CONFIG_TRACE_SINK is not set
 CONFIG_TTY_WAITQUEUE_DOUBLE_CHECK=y
-# CONFIG_DEVMEM is not set
-# CONFIG_DEVKMEM is not set
+CONFIG_DEVMEM=y
+CONFIG_DEVKMEM=y
 
 #
 # Serial drivers
@@ -3358,6 +3369,7 @@ CONFIG_ANDROID_INTF_ALARM_DEV=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 CONFIG_SW_SYNC_USER=y
+CONFIG_SAMP_HOTNESS=y
 # CONFIG_USB_WPAN_HCD is not set
 # CONFIG_WIMAX_GDM72XX is not set
 # CONFIG_CSR_WIFI is not set
@@ -3475,7 +3487,7 @@ CONFIG_DEVFREQ_GOV_SIMPLE_EXYNOS=y
 # DEVFREQ Drivers
 #
 CONFIG_ARM_EXYNOS5422_BUS_DEVFREQ=y
-# CONFIG_ARM_EXYNOS5433_BUS_DEVFREQ_TEMP_INT_MINLOCK is not set
+CONFIG_VIBETONZ=y
 CONFIG_MOTOR_DRV_MAX77804=y
 # CONFIG_MOTOR_DRV_ISA1000A is not set
 # CONFIG_SKIP_MOTOR_REGULATOR_CONTROL is not set
@@ -3723,6 +3735,7 @@ CONFIG_SECURE_OS_CONTROL=y
 #
 CONFIG_ICE40LM_FPGA=y
 # CONFIG_ICE40LP_FPGA is not set
+CONFIG_SEC_NET_FILTER=y
 
 #
 # File systems
@@ -4078,7 +4091,6 @@ CONFIG_SEC_SELINUX=y
 # CONFIG_SECURITY_YAMA is not set
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
-CONFIG_TZ_ICCC=y
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_DAC is not set
 CONFIG_DEFAULT_SECURITY="selinux"
@@ -4151,7 +4163,7 @@ CONFIG_CRYPTO_MD5=y
 # CONFIG_CRYPTO_RMD256 is not set
 # CONFIG_CRYPTO_RMD320 is not set
 CONFIG_CRYPTO_SHA1=y
-# CONFIG_CRYPTO_SHA1_ARM is not set
+CONFIG_CRYPTO_SHA1_ARM=y
 CONFIG_CRYPTO_SHA256=y
 CONFIG_CRYPTO_SHA512=y
 # CONFIG_CRYPTO_TGR192 is not set
